--- a/index.html
+++ b/index.html
@@ -14,7 +14,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Welcom To</h1>
-    <h1>Anwarul Islam World!</h1>
+    <section class="top-banner">
+      <div class="half-width">
+        <h1>Welcom To</h1>
+        <h1><span class="orange-color">Anwarul Islam</span> World!</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>
+          I am a student of MBA at BUBT. My intern is going on now. But regular
+          type of work i don't like. I want to be a creator in my life. And I
+          like challenges in life. That's why i want to be a web developer. I
+          motivated many to complete a web development course. That's why I am
+          here at Programming Hero to learn good coding.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://github.com/anwarul1"
+          >HIRE ME</a
+        >
+      </div>
+
+      <div class="half-width">
+        <img src="images/jhankar.png" alt="" />
+      </div>
+    </section>
   </body>
 </html>
