--- a/index.html
+++ b/index.html
@@ -38,5 +38,21 @@
         <img src="images/jhankar.png" alt="" />
       </div>
     </section>
+
+    <section class="drime-big">
+      <div class="half-width">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+
+      <div class="half-width">
+        <h1>Drime Big</h1>
+        <h2>Become a Web Developer</h2>
+        <p>
+          I already learned basic HTML and CSS. I can build any simple website.
+          I can even teach anyone how to make a simple website. My gole is to
+          build 3 websites and learn advanced topics.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
